--- a/manifest.json
+++ b/manifest.json
@@ -51,13 +51,7 @@
   
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "Universal Coupon Grabber",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
+    "default_title": "Universal Coupon Grabber"
   },
   
   "options_page": "options/options.html",
@@ -70,12 +64,7 @@
       ],
       "matches": ["<all_urls>"]
     }
-  ],
+  ]
   
-  "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  }
+
 }
